--- a/reviews.html
+++ b/reviews.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="sours/files/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="sours/files/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="sours/files/favicon_io/site.webmanifest">
-    <title>RoR</title>
+    <title>RoR - Отзывы</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="contacts.html">Контакты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contacts.html">Отзывы</a>
+                            <a class="nav-link active" href="reviews.html">Отзывы</a>
                         </li>
                     </ul>
                 </div>
@@ -123,7 +123,23 @@
         <div class="container">
             <h2 class="text-center mb-5">Реальные отзывы клиентов</h2>
             <div id="reviewsContainer" class="row">
-                <!-- Сюда будут добавляться реальные отзывы через JavaScript -->
+                <!-- Статический отзыв Сергея -->
+                <div class="col-lg-6 mb-4">
+                    <div class="real-review-card">
+                        <div class="real-review-header">
+                            <div class="real-client-avatar">С</div>
+                            <div class="client-info">
+                                <div class="client-name">Сергей</div>
+                                <div class="review-date">18.10.2025</div>
+                            </div>
+                        </div>
+                        <div class="real-rating">★★★★★</div>
+                        <p class="real-review-text">Все отлично!</p>
+                        <span class="real-service-type">Массаж лица</span>
+                    </div>
+                </div>
+                
+                <!-- Здесь будут добавляться новые отзывы через JavaScript -->
             </div>
         </div>
     </section>
