--- a/reviews.html
+++ b/reviews.html
@@ -129,7 +129,7 @@
                         <div class="real-review-header">
                             <div class="real-client-avatar">С</div>
                             <div class="client-info">
-                                <div class="client-name">Сергей</div>
+                                <div class="client-name">Максим</div>
                                 <div class="review-date">18.10.2025</div>
                             </div>
                         </div>
@@ -207,3 +207,4 @@
 </body>
 
 </html>
+
