--- a/reviews.html
+++ b/reviews.html
@@ -123,11 +123,11 @@
         <div class="container">
             <h2 class="text-center mb-5">Реальные отзывы клиентов</h2>
             <div id="reviewsContainer" class="row">
-                <!-- Статический отзыв Сергея -->
+                <!-- Статический отзыв  -->
                 <div class="col-lg-6 mb-4">
                     <div class="real-review-card">
                         <div class="real-review-header">
-                            <div class="real-client-avatar">С</div>
+                            <div class="real-client-avatar">М</div>
                             <div class="client-info">
                                 <div class="client-name">Максим</div>
                                 <div class="review-date">18.10.2025</div>
@@ -207,5 +207,6 @@
 </body>
 
 </html>
+
 
 
